# tauri-rust-react-mvp

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  JsonTool.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
