[package]
name = "tauri-rust-react-mvp"
version = "0.1.0"
description = "A simple Tauri + React + Rust example"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "dialog-all", "os-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
